--- a/app/src/main/res/layout/model_design_product.xml
+++ b/app/src/main/res/layout/model_design_product.xml
@@ -81,7 +81,7 @@
                     android:layout_weight=".5"
                     android:layout_height="wrap_content"
                     android:text="কিনুন"
-                    android:background="#000"/>
+                    android:background="#E2000000"/>
 
             </LinearLayout>
 
