--- a/app/src/main/res/layout/activity_chasabad_poddoti.xml
+++ b/app/src/main/res/layout/activity_chasabad_poddoti.xml
@@ -73,6 +73,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="@drawable/gradient1"
                         android:orientation="vertical">
 
                         <de.hdodenhof.circleimageview.CircleImageView
