--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,49 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/menu_home"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="হোম" />
-    <item
-        android:id="@+id/menu_chasabad"
-        android:icon="@drawable/ic_chasabadpoddoti"
-        android:title="চাষাবাদ পদ্বতি" />
-    <item
-        android:id="@+id/menu_market_products_price"
-        android:icon="@drawable/ic_market_price"
-        android:title="আজকের বাজার দর" />
 
-    <item
-        android:id="@+id/menu_instrument"
-        android:icon="@drawable/ic_instroment"
-        android:title="কৃষি যন্ত্রপাতি" />
+    <group android:checkableBehavior="single">
 
-    <item
-        android:id="@+id/menu_amr_foshol"
-        android:icon="@drawable/chasabad"
-        android:title="আমার ফসল" />
-    <item
-        android:id="@+id/menu_marketing"
-        android:icon="@drawable/marketing"
-        android:title="বাজারজাতকরন" />
+        <item
+            android:id="@+id/menu_home"
+            android:icon="@drawable/ic_baseline_home_24"
+            android:title="হোম" />
+        <item
+            android:id="@+id/menu_chasabad"
+            android:icon="@drawable/ic_chasabadpoddoti"
+            android:title="চাষাবাদ পদ্বতি" />
+        <item
+            android:id="@+id/menu_market_products_price"
+            android:icon="@drawable/ic_market_price"
+            android:title="আজকের বাজার দর" />
 
-    <item
-        android:id="@+id/menu_weather"
-        android:icon="@drawable/weather"
-        android:title="আবহাওয়া" />
+        <item
+            android:id="@+id/menu_instrument"
+            android:icon="@drawable/ic_instroment"
+            android:title="কৃষি যন্ত্রপাতি" />
 
-    <item
-        android:id="@+id/menu_profile"
-        android:icon="@drawable/ic_profile"
-        android:title="প্রোফাইল"></item>
+        <item
+            android:id="@+id/menu_amr_foshol"
+            android:icon="@drawable/chasabad"
+            android:title="আমার ফসল" />
+        <item
+            android:id="@+id/menu_marketing"
+            android:icon="@drawable/marketing"
+            android:title="বাজারজাতকরন" />
+        <item
+            android:id="@+id/menu_weather"
+            android:icon="@drawable/weather"
+            android:title="আবহাওয়া" />
+    </group>
 
-    <item
-        android:id="@+id/menu_setting"
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="সেটিংস" />
+    <item android:title="">
 
-    <item
-        android:id="@+id/menu_logout"
-        android:icon="@drawable/ic_baseline_login_24"
-        android:title="লগআউট" />
+        <menu>
+
+            <item
+                android:id="@+id/menu_profile"
+                android:icon="@drawable/ic_profile"
+                android:title="প্রোফাইল"></item>
+            <item
+                android:id="@+id/menu_setting"
+                android:icon="@drawable/ic_baseline_settings_24"
+                android:title="সেটিংস" />
+            <item
+                android:id="@+id/menu_about"
+                android:icon="@drawable/ic_baseline_settings_24"
+                android:title="আধুনিক কৃষি সম্পর্কে" />
+            <item
+                android:id="@+id/menu_logout"
+                android:icon="@drawable/ic_baseline_login_24"
+                android:title="লগআউট" />
+
+        </menu>
+    </item>
+
+
 </menu>
