--- a/app/src/main/res/layout/activity_pat__chas.xml
+++ b/app/src/main/res/layout/activity_pat__chas.xml
@@ -4,18 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Dan_Chas"
+    tools:context=".Pat_Chas"
 
     android:background="@color/white"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#1E36DA"
-        app:title="ধান চাষ পদ্ধতি"
+        app:title="পাট চাষ পদ্ধতি"
         app:titleTextColor="#FFF9F9"></androidx.appcompat.widget.Toolbar>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +23,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/DanChas_prokria"
+            android:id="@+id/PatChas_prokria"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -34,7 +33,7 @@
             android:textStyle="bold"></Button>
 
         <Button
-            android:id="@+id/Dan_rogbalai"
+            android:id="@+id/Pat_rogbalai"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -45,7 +44,7 @@
 
     </LinearLayout>
 
-<!-- for fragmant -->
+    <!-- for fragmant -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -76,7 +75,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="ধান চাষের পদ্ধতি "
+                android:text="পাট চাষের পদ্ধতি "
                 android:textColor="#FBFBFB"
                 android:textStyle="bold"
                 android:textSize="25sp"
@@ -87,8 +86,8 @@
                 android:paddingTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/danchasProkrian"
-               android:textColor="@color/black"
+                android:text="@string/pat_chas"
+                android:textColor="@color/black"
                 android:padding="10dp"
                 ></TextView>
 
@@ -98,10 +97,5 @@
         </LinearLayout>
 
     </ScrollView>
-
-
-
-
-
 
 </LinearLayout>
