--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -9,6 +9,15 @@
     android:background="@drawable/weather_bg"
     tools:context=".screens.WeatherActivity">
 
+    <!-- this is toolbar -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#1E36DA"
+        app:title="আজকের আবহাওয়া"
+        app:titleTextColor="#FFF9F9"></androidx.appcompat.widget.Toolbar>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -101,13 +110,13 @@
             android:textColor="#FFF"/>
 
         <TextView
-            android:layout_margin="5dp"
             android:id="@+id/cloudTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="206dp"
+            android:layout_height="31dp"
+            android:layout_margin="5dp"
             android:text="মেঘের পরিমানঃ "
-            android:textStyle="bold"
-            android:textColor="#FFF"/>
+            android:textColor="#FFF"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_margin="5dp"
