--- a/app/src/main/res/drawable/round_bg.xml
+++ b/app/src/main/res/drawable/round_bg.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <stroke
-        android:width="3dp"
-        android:color="#B7E391" />
-
+        android:width="2dp"
+        android:color="#62D113"/>
     <solid android:color="#FBFBFB" />
-
     <corners
-        android:radius="5dp"
-        android:topRightRadius="100dp" />
-
+        android:radius="25dp"/>
 </shape>
