--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,7 +76,8 @@
                 android:backgroundTint="#FFF"
                 android:text="লগ ইন"
                 android:textColor="#000"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:background="@drawable/round_bg"/>
 
 
             <ProgressBar
@@ -86,7 +87,8 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                />
 
         </RelativeLayout>
 
