--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,116 +5,128 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="#E97FD34C"
+    android:background="@drawable/loginbg"
     android:orientation="vertical"
     tools:context=".screens.RegisterActivity">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="86dp"
-        android:src="@mipmap/logo"></ImageView>
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register"
-        android:textColor="#FFF"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
-
-    <EditText
-        android:id="@+id/nameET"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="10dp"
-        android:hint="আপনার নাম"
-        android:padding="15dp"
-        android:textColor="#000"
-        android:textColorHint="#9F9B9B"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:background="@drawable/round_bg"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="#9C7FD34C"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="86dp"
+            android:src="@mipmap/logo"></ImageView>
 
-    <EditText
-        android:id="@+id/phoneET"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="10dp"
-        android:hint="আপনার ফোন নম্বর"
-        android:padding="15dp"
-        android:textColorHint="#9F9B9B"
-        android:textColor="#000"
-        android:inputType="phone"
-        android:minHeight="48dp"
-        android:background="@drawable/round_bg"/>
 
-    <Spinner
-        android:id="@+id/cityET"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="10dp"
-        android:hint="আপনার জেলা"
-        android:padding="15dp"
-        android:textColorHint="#9F9B9B"
-        android:inputType="text"
-        android:minHeight="48dp"
-        android:background="@drawable/round_bg"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Register"
+            android:textColor="#FFF"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
-    <EditText
-        android:id="@+id/passwordET"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="10dp"
-        android:hint="Password"
-        android:padding="15dp"
-        android:textColor="#000"
-        android:textColorHint="#9F9B9B"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
-        android:background="@drawable/round_bg"/>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/resgisterBTN"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+        <EditText
+            android:id="@+id/nameET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="রেজিস্টার করুন"
-            android:textSize="20sp"
-            android:backgroundTint="#FFFFFF"
-            android:textColor="#000"/>
+            android:layout_margin="20dp"
+            android:layout_marginBottom="10dp"
+            android:hint="আপনার নাম"
+            android:padding="15dp"
+            android:textColor="#000"
+            android:textColorHint="#9F9B9B"
+            android:inputType="textPersonName"
+            android:minHeight="48dp"
+            android:background="@drawable/round_bg"/>
 
-        <ProgressBar
-            android:id="@+id/loadingBar"
-            android:visibility="invisible"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+        <EditText
+            android:id="@+id/phoneET"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_marginBottom="10dp"
+            android:hint="আপনার ফোন নম্বর"
+            android:padding="15dp"
+            android:textColorHint="#9F9B9B"
+            android:textColor="#000"
+            android:inputType="phone"
+            android:minHeight="48dp"
+            android:background="@drawable/round_bg"/>
 
-    </RelativeLayout>
+        <Spinner
+            android:id="@+id/cityET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_marginBottom="10dp"
+            android:hint="আপনার জেলা"
+            android:padding="15dp"
+            android:textColorHint="#9F9B9B"
+            android:inputType="text"
+            android:minHeight="48dp"
+            android:background="@drawable/round_bg"/>
+
+        <EditText
+            android:id="@+id/passwordET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_marginBottom="10dp"
+            android:hint="Password"
+            android:padding="15dp"
+            android:textColor="#000"
+            android:textColorHint="#9F9B9B"
+            android:inputType="textPassword"
+            android:minHeight="48dp"
+            android:background="@drawable/round_bg"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/resgisterBTN"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="রেজিস্টার করুন"
+                android:textSize="20sp"
+                android:backgroundTint="#FFFFFF"
+                android:textColor="#000"
+                android:background="@drawable/round_bg"/>
+
+            <ProgressBar
+                android:id="@+id/loadingBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:visibility="invisible" />
+
+        </RelativeLayout>
 
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:minHeight="48dp"
+            android:onClick="sign_in"
+            android:text="@string/already_have_an_account_sign_in"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:minHeight="48dp"
-        android:onClick="sign_in"
-        android:text="@string/already_have_an_account_sign_in"
-        android:textColor="@color/black"
-        android:textSize="18sp"/>
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
