--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -111,8 +111,8 @@
 
         <TextView
             android:id="@+id/cloudTV"
-            android:layout_width="206dp"
-            android:layout_height="31dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="মেঘের পরিমানঃ "
             android:textColor="#FFF"
