--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -129,16 +129,16 @@
             android:text="যুক্ত করুন"
             android:textSize="20sp"
             android:textColor="#000"
-            android:background="#FFF"/>
+            android:background="@drawable/round_bg"/>
 
         <ProgressBar
-            android:visibility="invisible"
             android:id="@+id/loadingBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp" />
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="40dp"
+            android:visibility="invisible" />
 
     </RelativeLayout>
 
