--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -61,7 +61,8 @@
             android:layout_height="wrap_content"
             android:text="বিক্রি করবেন - "
             android:textColor="@color/black"
-            android:textSize="12sp"
+            android:textSize="15sp"
+            android:textStyle="bold"
             android:textAlignment="center"/>
 
     </LinearLayout>
@@ -108,8 +109,10 @@
         android:id="@+id/product_callBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="পণ্য এর মালিককে কল করুন"
+        android:text=" পণ্য এর মালিককে কল করুন"
+        android:textColor="#0BD60E"
         android:layout_gravity="center"
+        android:drawableLeft="@drawable/ic_baseline_call_24"
         android:layout_margin="20dp"/>
 
 
