--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -71,19 +71,17 @@
 
 
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="95dp"
-            app:cardCornerRadius="30dp"
-            app:cardElevation="20dp"
-            app:cardBackgroundColor="#ECE8E8"
-
+            android:background="@drawable/top_round_bd"
+            android:orientation="vertical"
             >
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="10dp">
+            android:paddingTop="30dp">
 
 
 
@@ -225,6 +223,7 @@
                                         android:gravity="center"
                                         android:text="ক্রয়  বিক্রয়"
                                         android:textColor="#3BC609"
+                                        android:textSize="20sp"
                                         android:textStyle="bold"></TextView>
 
                                 </LinearLayout>
@@ -262,6 +261,7 @@
                                         android:gravity="center"
                                         android:text="কৃষি যন্ত্রপাতি"
                                         android:textColor="#3BC609"
+                                        android:textSize="20sp"
                                         android:textStyle="bold"></TextView>
 
                                 </LinearLayout>
@@ -306,6 +306,7 @@
                                         android:gravity="center"
                                         android:text="প্রশ্ন ও উত্তর"
                                         android:textColor="#3BC609"
+                                        android:textSize="20sp"
                                         android:textStyle="bold" />
 
                                 </LinearLayout>
@@ -314,6 +315,7 @@
                             </androidx.cardview.widget.CardView>
 
                             <androidx.cardview.widget.CardView
+                                android:id="@+id/H_market_price"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_margin="10dp"
@@ -340,6 +342,7 @@
                                         android:gravity="center"
                                         android:text="বাজর দর"
                                         android:textColor="#3BC609"
+                                        android:textSize="20sp"
                                         android:textStyle="bold"></TextView>
 
                                 </LinearLayout>
@@ -356,210 +359,13 @@
 
                     //horizontal start
 
-                    <!--
-
-                    <HorizontalScrollView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="#A2E1AC"
-                        android:padding="10dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal">
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_margin="20dp"
-                                android:layout_weight="1"
-                                android:padding="10dp"
-                                app:cardBackgroundColor="#ffff">
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:orientation="vertical">
-
-                                    <ImageView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight=".20"
-                                        android:src="@mipmap/ic_launcher"></ImageView>
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight=".80"
-                                        android:text="this is name"></TextView>
-
-                                </LinearLayout>
-
-
-                            </androidx.cardview.widget.CardView>
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_margin="20dp"
-                                android:layout_weight="1"
-                                android:padding="10dp"
-                                app:cardBackgroundColor="#ffff">
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:orientation="vertical">
-
-                                    <ImageView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight=".20"
-                                        android:src="@mipmap/ic_launcher"></ImageView>
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight=".80"
-                                        android:text="this is name"></TextView>
-
-                                </LinearLayout>
-
-
-                            </androidx.cardview.widget.CardView>
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_margin="20dp"
-                                android:layout_weight="1"
-                                android:padding="10dp"
-                                app:cardBackgroundColor="#ffff">
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:orientation="vertical">
-
-                                    <ImageView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight=".20"
-                                        android:src="@mipmap/ic_launcher"></ImageView>
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight=".80"
-                                        android:text="this is name"></TextView>
-
-                                </LinearLayout>
-
-
-                            </androidx.cardview.widget.CardView>
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_margin="20dp"
-                                android:layout_weight="1"
-                                android:padding="10dp"
-                                app:cardBackgroundColor="#ffff">
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:orientation="vertical">
-
-                                    <ImageView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight=".20"
-                                        android:src="@mipmap/ic_launcher"></ImageView>
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight=".80"
-                                        android:text="this is name"></TextView>
-
-                                </LinearLayout>
-
-
-                            </androidx.cardview.widget.CardView>
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_margin="20dp"
-                                android:layout_weight="1"
-                                android:padding="10dp"
-                                app:cardBackgroundColor="#ffff">
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:orientation="vertical">
-
-                                    <ImageView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight=".20"
-                                        android:src="@mipmap/ic_launcher"></ImageView>
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight=".80"
-                                        android:text="this is name"></TextView>
-
-                                </LinearLayout>
-
-
-                            </androidx.cardview.widget.CardView>
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_margin="20dp"
-                                android:layout_weight="1"
-                                android:padding="10dp"
-                                app:cardBackgroundColor="#ffff">
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:orientation="vertical">
-
-                                    <ImageView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight=".20"
-                                        android:src="@mipmap/ic_launcher"></ImageView>
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight=".80"
-                                        android:text="this is name"></TextView>
-
-                                </LinearLayout>
-                            </androidx.cardview.widget.CardView>
-
-                            // end horizontalscrollview
-                        </LinearLayout>
-                    </HorizontalScrollView>
-
-
-                        -->
 
                     // ourter 1st end
                 </LinearLayout>
 
 
         </ScrollView>
-</androidx.cardview.widget.CardView>
+        </LinearLayout>
 
     </RelativeLayout>
 
