--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -45,7 +45,7 @@
             <item
                 android:id="@+id/menu_profile"
                 android:icon="@drawable/ic_profile"
-                android:title="প্রোফাইল"></item>
+                android:title="প্রোফাইল"/>
             <item
                 android:id="@+id/menu_setting"
                 android:icon="@drawable/ic_baseline_settings_24"
