--- a/app/src/main/res/layout/model_design_product.xml
+++ b/app/src/main/res/layout/model_design_product.xml
@@ -85,9 +85,35 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/model_editIV"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".5"
+                    android:src="@drawable/ic_baseline_edit_24"/>
+
+                <ImageView
+                    android:id="@+id/model_deleteIV"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".5"
+                    android:src="@drawable/ic_baseline_delete_24"/>
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
+
+
     </LinearLayout>
+
+
 
 </androidx.cardview.widget.CardView>
